# python-for-defender-2

./: Cheatsheet part1.py  Cheatsheet part2.py  sandbox.py
python-for-defenders-2/: .gitignore  README.md  pyproject.toml
python-for-defenders-2/2-1_markdown/: 2-1_markdown.ipynb
python-for-defenders-2/2-2_widgets/: 2-2_widgets.ipynb
python-for-defenders-2/2-3_file-upload/: 2-3_file-upload.ipynb
python-for-defenders-2/2-4_hash-generator/: 2-4_hash-generator.ipynb  sample1.txt  sample2.txt
python-for-defenders-2/3-1_opening-files/: 3-1_opening-files.ipynb  indicators.txt  names_1.txt  names_2.txt  names_3.txt  testme.py
python-for-defenders-2/3-2_csvs/: 3-2_csvs.ipynb  ransomware_iocs.csv
python-for-defenders-2/3-3_json/: 3-3_json.ipynb
python-for-defenders-2/3-4_regex/: 3-4_regex.ipynb
python-for-defenders-2/3-5_ioc-extractor/: 3-5_ioc-extractor.ipynb  free_beer.csv  medusalocker.html
python-for-defenders-2/4-1_requests/: 4-1_requests.ipynb
python-for-defenders-2/4-2_apis/: 4-2_apis.ipynb
python-for-defenders-2/4-3_scraping/: 4-3_scraping.ipynb
python-for-defenders-2/4-4_tracker-detection/: 4-4_tracker-detection.ipynb
python-for-defenders-2/5-1_pandas/: 5-1_pandas.ipynb
python-for-defenders-2/5-2_dataframes/: 5-2_dataframes.ipynb
python-for-defenders-2/5-3_dataframe-manipulation/: 5-3_dataframe-manipulation.ipynb
python-for-defenders-2/5-4_quantitative-analysis/: 5-4_quantitative-analysis.ipynb  emo.pcapng
python-for-defenders-2/6-1_visualization/: 6-1_visualization.ipynb
python-for-defenders-2/7-1_reporting/: 7-1_reporting.ipynb
(+1 files in other folders)
