[tool.poetry]
name = "python-for-defenders-2"
version = "0.1.0"
description = "Python for Defenders, Pt. 2, from The Taggart Institute"
authors = ["Michael Taggart <mtaggart@taggart-tech.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11.0"
jupyterlab = "^3.4.4"
ipywidgets = "^7.7.1"
plotly = "^5.9.0"
pandas = "^1.4.3"
jupyter-dash = "^0.4.2"
jupyter = "^1.0.0"
JLDracula = "^0.1.0"
requests = "^2.28.1"
Markdown = "^3.4.1"
rich = {extras = ["jupyter"], version = "^12.6.0"}
pdfplumber = "^0.7.5"
vt-py = "^0.17.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
scipy = "^1.9.3"
python-Wappalyzer = "^0.3.1"
scapy = "^2.4.5"
python-evtx = "^0.7.4"
matplotlib = "^3.6.2"
altair = "^4.2.0"
jupyter-dashboards = "^0.7.0"
datapane = "^0.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
